Fix project title spacing

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -35,6 +35,10 @@
             }
         }
 
+        h2 {
+            margin-bottom: 0.3rem;
+        }
+
         .project-description {
             font-size: 1.125rem;
             margin-bottom: 2rem;
